--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+# St. Xavier ERP - Comprehensive .gitignore
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# dependencies
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Expo
 .expo/
@@ -21,7 +25,7 @@ expo-env.d.ts
 # Metro
 .metro-health-check*
 
-# debug
+# Debug
 npm-debug.*
 yarn-debug.*
 yarn-error.*
@@ -30,8 +34,47 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
+# Environment files
+.env
 .env*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# typescript
+# TypeScript
 *.tsbuildinfo
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+Thumbs.db
+
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+
+# Build artifacts
+build/
+
+# Testing
+coverage/
+
+# Logs
+logs
+*.log
+
+# Vercel
+.vercel
+
+# Temporary folders
+tmp/
+temp/
+
+# EAS
+eas.json
+
+# Project specific
+PROJECT_PROGRESS_COMPLETE.txt.backup
